--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
     "chroma": "0.0.1",
     "chroma-js": "^2.1.0",
+    "jquery": "^1.12.4",
+    "popper.js": "^1.16.1",
     "rc-slider": "^9.3.0",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
